fixed browser toolbar on mobile. updated pink gradient on work page.

--- a/css/main.css
+++ b/css/main.css
@@ -1003,10 +1003,10 @@ section.work-shots.springserve {
 section.work-shots.springserve-2 {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ec2059+0,d21874+100 */
 background: #ec2059; /* Old browsers */
-background: -moz-linear-gradient(top, #ec2059 0%, #d21874 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #ec2059 0%,#d21874 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #ec2059 0%,#d21874 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ec2059', endColorstr='#d21874',GradientType=0 ); /* IE6-9 */
+background: -moz-linear-gradient(top, #ec2059 0%, #d21854 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #ec2059 0%,#d21854 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #ec2059 0%,#d21854 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ec2059', endColorstr='#d21854',GradientType=0 ); /* IE6-9 */
 }
 
 section.work-shots.client-portal {
@@ -1169,10 +1169,10 @@ section.work-shots.demand-desk {
 
 /*browser*/
 .browser {
-    margin: 2em 0;
-    padding-top: 40px;
-    background: url(../img/dots.png) no-repeat 16px 16px #f2f2f2;
-    background-size: 35px 8px;
+    margin: 0;
+    padding-top: 18px;
+    background: url(../img/dots.png) no-repeat 8px 8px #f2f2f2;
+    background-size: 17px 4px;
     border: 1px solid #d3dddb;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
@@ -1210,6 +1210,15 @@ section.work-shots.demand-desk {
     margin: 0;
     border-radius: 0 0 6px 6px;
     border-top: 1px solid #d3dddb;
+}
+
+@media(min-width:768px) {
+  .browser {
+    margin: 2em 0;
+    padding-top: 40px;
+    background: url(../img/dots.png) no-repeat 16px 16px #f2f2f2;
+    background-size: 35px 8px;
+  }
 }
 
 .work-header {
